# uvatraj_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: ControlPoint.msg
srv/: ModifyTraj.srv  RequestTraj.srv
